<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.ViewsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearLayout3"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="16dp">

            <CheckBox
                    android:text="@string/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbStatus"
                    android:layout_gravity="left"
                    android:layout_weight="1" />

            <Button
                    android:text="@string/change_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/changeStatusButton"
                    android:layout_gravity="right"
                    android:layout_weight="1" />
        </LinearLayout>

        <TextView
                android:text="@string/cb_deactivated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbStatusText"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
